<resources>
    <string name="app_name">Login And Product</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="_100_00">$100.00</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_imperdiet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...</string>
    <string name="a_adir">Add to cart</string>
    <string name="create_new_naccount">Create New \nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="si_has_olvidado_tu_contrasenya_haz_clic_en_este_link">Si has olvidado tu contrasenya. Haz clic en este link.</string>
</resources>